--- a/hpack-convert-api.cabal
+++ b/hpack-convert-api.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yaml by hpack version 0.14.1.
+-- This file has been generated from package.yaml by hpack version 0.14.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -29,6 +29,8 @@ library
     , unordered-containers
     , http-types
     , text
+    , shakespeare >=2
+    , blaze-html
   exposed-modules:
       Hpack.Convert.API
   other-modules:
@@ -48,5 +50,7 @@ executable hpack-convert-api
     , unordered-containers
     , http-types
     , text
+    , shakespeare >=2
+    , blaze-html
     , hpack-convert-api
   default-language: Haskell2010
